--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,26 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 html, body {
   margin: 0;
-  padding: 0
+  padding: 0;
+  font-size:16px !important;
+  font-family: 'Roboto' , sans-serif
 }
 
-a, .navbar-brand path {
-transition: all 0.2s linear
+
+
+a, .navbar-brand path, .footer-logo path, footer .footer-scroll a,footer .footer-scroll a path{
+	transition: all 0.2s linear;
+	text-decoration: none
+}
+
+a:hover, a:focus {
+	outline: 0;
+	text-decoration: none
 }
 
 /* TODAS PAGINAS */
 
 .pageBody {
-  min-height: 500px
+  min-height: 600px
 }
 
 .pageBody h3 {
@@ -43,31 +45,49 @@ transition: all 0.2s linear
   line-height: 150px;
 }
 
+.pageMain .box a span {
+	display:block;
+	line-height: 20px;
+	margin-top:-30px
+}
+
 .pageMain .box a {
   background: #78A04C;
   color: #FFF;
   text-decoration: none;
-  display: block
+  display: block;
+  padding-bottom: 30px;
 }
 
 .pageMain .box a:hover {
-  background: #FF0000
+  background: #e87e04
 }
 
 .pageMain > .row {
   margin: 250px 0
 }
 
+.pageMain svg {
+	vertical-align: middle;
+	width: 50px;
+	height: 50px;
+}
+
+
+.pageMain path {
+	fill: #FFFFFF
+}
 /* HEADER */
 .navbar {
-  background: #78A04C;
+  background: #3b454a;
   color: #FFF;
   margin-bottom: 60px
 }
 
 .navbar a {
   color: #FFF;
-  margin-right: 10px
+  margin-right: 10px;
+  font-size:.875rem
 }
 
 .navbar a:hover {
@@ -80,12 +100,16 @@ display:block;
 height: 25px
 }
 
-.navbar-brand path {
-   fill: #FFF;
+.navbar-brand .logo-a1,
+.navbar-brand .logo-a3 {
+	fill: #78A04C
 }
 
-.navbar-brand:hover path {
-   fill: #001122
+
+
+.navbar-brand:hover .logo-a1,
+.navbar-brand:hover .logo-a3 {
+   fill: #e87e04
 }
 
 .nav>li>a:focus, .nav>li>a:hover {
@@ -95,7 +119,7 @@ background: transparent
 
 /* FOOTER */
 footer {
-    padding-bottom: 2rem;
+
 }
 
 
@@ -109,60 +133,99 @@ footer .footer-top {
 
 footer .footer-scroll {
     text-align: right;
-    margin-top: 12px;
+    line-height: 3.9375rem;
     cursor: pointer;
 }
 
+footer .footer-scroll a {
+    font-family: Muli,Muli-local,sans-serif;
+    font-size: 12px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #82939c;
+    cursor: pointer;
+	text-decoration: none
+} 
+footer .footer-scroll a:hover {
+	color: #e87e04
+}
 
-footer .footer__links {
+footer .footer-scroll a:hover path {
+	fill: #e87e04
+}
+
+footer .footer-scroll svg {
+	vertical-align: middle;
+	margin-top: -2px;
+	margin-left: 10px;
+	width: 20px;
+	height: 20px
+}
+
+
+footer .footer-mid {
     background: #242b2e;
     color: #fff;
     font-size: .875rem;
     font-weight: 500;
+
+    padding: 68px 2rem;
 }
 
-footer .footer__links-title {
+footer .footer-mid svg {
+	height: 35px;
+	margin-bottom: 20px
+}
+	
+footer .footer-logo .logo-a1,
+footer .footer-logo .logo-a3 {
+	fill: #78A04C
+}
+
+footer .footer-logo:hover .logo-a1,
+footer .footer-logo:hover .logo-a3 {
+   fill: #e87e04
+}
+
+footer .footer-mid .link-title {
     font-family: Muli,Muli-local,sans-serif;
     font-weight: 900;
-    font-size: .75rem;
+    font-size: .80rem;
     color: #82939c;
     text-transform: uppercase;
     margin-bottom: .625rem;
 }
 
-footer .footer__links a.link {
+footer .footer-mid .col-logo .link-title {
+	margin-top:20px
+}
+
+footer .footer-mid .link {
     display: block;
     font-size: .875rem;
     font-weight: 500;
     color: #fff;
     margin-bottom: 1.0625rem;
+	text-decoration: none
+}
+footer .footer-mid .link:hover {
+	color: #e87e04
 }
 
-footer .footer__legal {
-    padding: 2rem 0;
+
+footer .footer-sub {
+    padding-top: 2rem;
+	padding-bottom: 2rem;
     border-top: 1px solid rgba(255,255,255,.25);
-}
-footer .footer__legal .row {
-    max-width: 78.125rem;
-    padding: 0 2rem;
+	background: #242b2e;
 }
 
-footer .footer__legal-copyright {
-    display: inline-block;
+footer .footer-sub p {
     font-size: .875rem;
     margin-right: 2rem;
     color: #82939c;
 }
 
-footer .footer__legal-link {
-    display: inline-block;
-}
-
-footer .footer__legal-link a {
-    color: #82939c;
-    font-size: .875rem;
-    margin: 0 5px;
-}
 
 /* Sidebar - About */
 .section-about h5 {
