--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -161,6 +161,92 @@ h1, h2, h3, h4 {
     fill: #FFF
 }
 
+
+.footer-logo .logo-t1,
+.footer-logo .logo-h1,
+.footer-logo .logo-a1,
+.footer-logo .logo-t2,
+.footer-logo .logo-a2,
+.footer-logo .logo-p1,
+.footer-logo .logo-p2 
+{
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;  
+}
+
+.footer-logo .logo-t1 {
+    animation-name: first ;
+ }
+.footer-logo .logo-h1 {
+   animation-name: second ;
+ }
+ .footer-logo .logo-a1 {
+   animation-name: third ;
+ }
+ .footer-logo .logo-t2 {
+   animation-name: fourth ;
+ }
+ .footer-logo .logo-a2 {
+   animation-name: fifth ;
+ }
+ .footer-logo .logo-p1 {
+   animation-name: sixth ;
+ }
+ .footer-logo .logo-p2 {
+   animation-name: seventh ;
+ }
+ 
+@keyframes first {
+    0%   {fill-opacity:0.2;}
+    10%  {fill-opacity:1;}
+    20%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes second {
+    0%   {fill-opacity:0;}
+    10%   {fill-opacity:0.2;}
+    20%  {fill-opacity:1;}
+    30%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes third {
+    0%   {fill-opacity:0;}
+    20%  {fill-opacity:0.2;}
+    30%  {fill-opacity:1;}
+    40%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes fourth {
+    0%   {fill-opacity:0;}
+    30%  {fill-opacity:0.2;}
+    40%  {fill-opacity:1;}
+    50%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes fifth {
+    0%   {fill-opacity:0;}
+    40%  {fill-opacity:0.2;}
+    50%  {fill-opacity:1;}
+    60%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes sixth {
+    0%   {fill-opacity:0;}
+    50%  {fill-opacity:0.2;}
+    60%  {fill-opacity:1;}
+    70%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+  @keyframes seventh {
+    0%   {fill-opacity:0;}
+    60%  {fill-opacity:0.2;}
+    70%  {fill-opacity:1;}
+    80%  {fill-opacity:0.2;}
+    100% {fill-opacity:0;}
+  }
+
+
 .nav > li > a:focus,
 .nav > li > a:hover {
     background: transparent !important
@@ -322,13 +408,15 @@ footer .footer-mid ul li {
     margin-bottom: 0.8625rem;
 }
 
-footer .footer-mid a {
+footer .footer-mid a,
+footer .footer-sub a {
     font-size: .875rem;
     color: #fff;
     text-decoration: none;
 }
 
-footer .footer-mid a:hover {
+footer .footer-mid a:hover,
+footer .footer-sub a:hover {
     color: #5cb85c;
     box-shadow: 0 3px #5cb85c;
     transition: all 0.3s;
@@ -341,10 +429,17 @@ footer .footer-sub {
     background: #242b2e;
 }
 
+footer .footer-sub svg {
+    width: 25px;
+    height: auto;
+    vertical-align: middle
+}
+
 footer .footer-sub p {
     font-size: .875rem;
     margin-right: 2rem;
     color: #82939c;
+    line-height: 2em
 }
 
 footer .link-social {
@@ -650,6 +745,16 @@ input[type=range]:focus::-ms-fill-upper {
 .itemPost {
     margin: 30px 0
 }
+.itemPost .meta {
+    margin-top: 20px
+}
+
+.itemPost .totals {
+    color: #999
+}
+.itemPost .totals span {
+    font-weight: 700
+}
 
 /* PAGE SINGLE POSTS */
 
@@ -724,13 +829,6 @@ input[type=range]:focus::-ms-fill-upper {
     vertical-align: middle;
     margin-top: -3px;
     margin-right: 10px
-}
-
-.pageSinglePost .btn-group .btn-angry {
-    padding: 0 20px
-}
-.pageSinglePost .btn-group .btn-angry svg {
-    height: 38px
 }
 
 .pageSinglePost .btn-group button {
